Add router entity
